[package]
name = "acdcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acdc = { git = "https://github.com/THCLab/acdc-rust" }
keri = { git = "https://github.com/WebOfTrust/keriox" }
anyhow = "1.0.51"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.14"
kademlia-dht = "1.2.0"
rand = "0.8.4"
serde = "1.0.131"
serde_json = "1.0.73"
sha3 = "0.10.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
warp = "0.3.2"
