[package]
name = "tda-deamon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acdc = { git = "https://github.com/THCLab/acdc-rust", branch = "keriox_feature", features = ["keriox"] }
keri = { git = "https://github.com/WebOfTrust/keriox", branch = "witness_rotation"}
anyhow = "1.0.51"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
warp = "0.3.2"
ureq = { version = "2.4.0", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"