[package]
name = "tda-deamon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acdc = { path = "../acdc-rust", features = ["keriox"] }
keri = { git = "ssh://git@github.com/THCLab/keriox.git", branch = "oobis", features = ["query", "oobi"] }
anyhow = "1.0.51"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
figment = { version = "0.10.6", features = ["json"] }
url = { version = "2.2.2", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
futures = { version = "0.3.19", features = ["std"] }
